<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".presentation.mobbScan.MobbScanActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"  />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"  />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_horizontal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9"  />

    <TextView
        android:id="@+id/tv_select"
        style="@style/Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_size_medium"
        android:text="Select front and back side from document id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_front"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_size_largexx"
        android:text="@string/front"
        app:layout_constraintEnd_toStartOf="@+id/gl_vertical"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_select" />

    <ImageView
        android:id="@+id/iv_front"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/gl_horizontal"
        app:layout_constraintEnd_toEndOf="@+id/bt_front"
        app:layout_constraintStart_toStartOf="@+id/bt_front"
        app:layout_constraintTop_toBottomOf="@+id/bt_front"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/bt_back"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_size_largexx"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toEndOf="@+id/gl_vertical"
        app:layout_constraintTop_toBottomOf="@+id/tv_select" />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/gl_horizontal"
        app:layout_constraintEnd_toEndOf="@+id/bt_back"
        app:layout_constraintStart_toStartOf="@+id/bt_back"
        app:layout_constraintTop_toBottomOf="@+id/bt_back"
        tools:srcCompat="@tools:sample/avatars" />

    <include
        android:id="@+id/document_info"
        layout="@layout/document_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/gl_horizontal"
        android:layout_marginTop="@dimen/margin_padding_size_medium"
        android:visibility="gone"/>

    <include
        android:id="@+id/not_document_detected"
        layout="@layout/not_document_detected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/gl_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/bt_check"/>

    <ProgressBar
        android:id="@+id/pb_loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/iv_camera"
        style="@style/IconSelector"
        android:layout_marginTop="@dimen/margin_padding_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_select"
        app:srcCompat="@drawable/ic_camera"/>

    <ImageView
        android:id="@+id/iv_gallery"
        style="@style/IconSelector"
        app:layout_constraintBottom_toTopOf="@+id/gl_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_camera"
        app:layout_constraintVertical_bias="0.26999998"
        app:srcCompat="@drawable/ic_gallery" />

    <Button
        android:id="@+id/bt_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Button"
        android:text="@string/check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gl_horizontal2" />


</androidx.constraintlayout.widget.ConstraintLayout>